feat: rename wending -> wedding & budget page
